# msc-mcp-core

./: .gitignore  README.md  mcp_server.py  pyproject.toml  requirements.txt  sync-mcps.sh  test_smoke.py
connectors/: __init__.py  config.py  drive_source.py  github_source.py  hf_source.py  supabase_source.py  vercel_source.py
